Added example of a test case that must be executed in isolation.